working on implementation of map into notebook

--- a/Nathan/roadToConfederation/roadToConfederation.ipynb
+++ b/Nathan/roadToConfederation/roadToConfederation.ipynb
@@ -15,15 +15,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "\n",
+       "<script src=\"https://d3js.org/d3.v4.min.js\"></script>\n",
        "<img style=\"margin-top: 30px; width: 40%; float: left;\" src=\"imgs/newfrance1745_1.jpg\">\n",
-       "<img style=\"width: 40%;\" src=\"imgs/populationgraphic1745.jpg\">"
+       "<img style=\"width: 40%;float: right;\" src=\"imgs/populationgraphic1745.jpg\">"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -35,9 +35,9 @@
    ],
    "source": [
     "%%html\n",
-    "\n",
+    "<script src=\"https://d3js.org/d3.v4.min.js\"></script>\n",
     "<img style=\"margin-top: 30px; width: 40%; float: left;\" src=\"imgs/newfrance1745_1.jpg\">\n",
-    "<img style=\"width: 40%;\" src=\"imgs/populationgraphic1745.jpg\">"
+    "<img style=\"width: 40%;float: right;\" src=\"imgs/populationgraphic1745.jpg\">"
    ]
   },
   {
@@ -47,6 +47,39 @@
     "## The Royal Proclamation of 1763\n",
     "\n",
     "The Royal Proclamation of 1763 was implemented after France ceded its control of New France (Canada), the Louisiana Purchase, and other assets in the Caribbean to British control in 1763 due to the Treaty of Paris. With this Proclamation, the British decided what would happen with Canada. They decided to create “Indian Territory” west of the Allegheny Mountains [potential link with the pic below (when hovering over mountains, show area)].along with new governmental institutions for Quebec that promised elected assemblies but excluded Catholics from office. This means that most of the French living within Quebec were excluded from representing their own interests to their new Crown. The British also tried to make Quebec another colony of the Thirteen Colonies though the culture was so largely different from that of any of the Thirteen Colonies that this never ended up happening. Each of these policies enacted by the Proclamation was intended to attract British, Protestant settlers from English colonies to further the British influence over the culture that had not existed previously. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script src=\"js/interactive-map.js\"></script>\n",
+       "\n",
+       "<div id=\"interactive=map-container\">\n",
+       "\n",
+       "</div>\n",
+       "<script>generateMap()</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<script src=\"js/interactive-map.js\"></script>\n",
+    "\n",
+    "<div id=\"interactive=map-container\">\n",
+    "\n",
+    "</div>\n",
+    "<script>generateMap()</script>"
    ]
   },
   {
