Added speed up slow down functionality to clock

--- a/Vincent/CC-193 Geometry Basics 5/GeometryBasics5.ipynb
+++ b/Vincent/CC-193 Geometry Basics 5/GeometryBasics5.ipynb
@@ -62,91 +62,169 @@
    "source": [
     "%%html\n",
     "<style>\n",
-    "    #clock {\n",
-    "        border-radius: 40px;\n",
-    "        padding: 0;\n",
-    "        margin: auto;\n",
-    "        display: block;\n",
-    "    }\n",
+    "# body {\n",
+    "#     margin: 0;\n",
+    "# }\n",
+    "\n",
+    "# .main {\n",
+    "#     margin: 0 auto;\n",
+    "#     width: 500px;\n",
+    "# }\n",
+    "\n",
+    "#clock {\n",
+    "    border-radius: 40px;\n",
+    "    padding: 0;\n",
+    "}\n",
+    "\n",
+    "h1 {\n",
+    "    font-family: Arial, Helvetica, sans-serif;\n",
+    "}\n",
     "</style>\n",
     "<body>\n",
-    "    <canvas id=\"clock\"></canvas>\n",
+    "    <div class=\"main\">\n",
+    "        <canvas id=\"clock\"></canvas>\n",
+    "        <div class=\"btns\">\n",
+    "            <button onclick=\"speedUp();\">Speed Up</button>\n",
+    "            <button onclick=\"slowDown();\">Slow Down</button>\n",
+    "            <button onclick=\"regularSpeed(null);\">Regular Speed</button>\n",
+    "            <button onclick=\"resetClock();\">Reset</button>\n",
+    "        </div>\n",
+    "    </div>\n",
     "    <script>\n",
-    "    var canvas = document.getElementById('clock');\n",
-    "    var ctx = canvas.getContext('2d');\n",
+    "   var canvas = document.getElementById('clock');\n",
+    "var ctx = canvas.getContext('2d');\n",
     "\n",
-    "    canvas.width = 800;\n",
-    "    canvas.height = 700;\n",
-    "    var x = canvas.width / 2;\n",
-    "    var y = canvas.height / 2;\n",
-    "    var radius = 50;\n",
-    "    var lineWidth = 45;\n",
+    "var width = 600;\n",
+    "var height = 600;\n",
+    "canvas.width = width;\n",
+    "canvas.height = height;\n",
+    "var x = canvas.width / 2;\n",
+    "var y = canvas.height / 2;\n",
+    "var radius = 40;\n",
+    "var lineWidth = 35;\n",
     "\n",
-    "    function animate() {\n",
-    "        requestAnimationFrame(animate);\n",
-    "        ctx.clearRect(0, 0, canvas.width, canvas.height);\n",
-    "        ctx.fillStyle = \"#090909\";\n",
-    "        ctx.fillRect(0, 0, canvas.width, canvas.height);\n",
-    "        var date = new Date();\n",
+    "var speed = 0;\n",
     "\n",
-    "        var sec = new TimeCircle(x, y, radius, lineWidth, 1, ((Math.PI * 2 / 60) * date.getSeconds() +  Math.PI * 3 / 2), '#329652');\n",
-    "        var min = new TimeCircle(x, y, radius, lineWidth, 2, ((Math.PI * 2 / 60) * date.getMinutes() +  Math.PI * 3 / 2), '#c551ab');\n",
-    "        var hour = new TimeCircle(x, y, radius, lineWidth, 3, ((Math.PI * 2 / 12) * (date.getHours() % 12) +  Math.PI * 3 / 2), '#5369c6');\n",
-    "        var day = new TimeCircle(x, y, radius, lineWidth, 4, ((Math.PI * 2 / monthDivider(date.getMonth(), date.getFullYear())) * date.getDate() +  Math.PI * 3 / 2), '#d6d483');\n",
-    "        var month = new TimeCircle(x, y, radius, lineWidth, 5, ((Math.PI * 2 / 12) * date.getMonth() +  Math.PI * 3 / 2), '#e2c2eb');\n",
-    "    \n",
-    "        sec.draw();\n",
-    "        min.draw();\n",
-    "        hour.draw();\n",
-    "        day.draw();\n",
-    "        month.draw();\n",
+    "var months = [\n",
+    "    \"January\",\n",
+    "    \"February\",\n",
+    "    \"March\",\n",
+    "    \"April\",\n",
+    "    \"May\",\n",
+    "    \"June\",\n",
+    "    \"July\",\n",
+    "    \"August\",\n",
+    "    \"September\",\n",
+    "    \"October\",\n",
+    "    \"November\",\n",
+    "    \"December\",\n",
+    "]\n",
     "\n",
-    "        var time = (date.getHours() < 10 ? \"0\" + date.getHours() : date.getHours()) + \n",
-    "            \":\" + (date.getMinutes() < 10 ? \"0\" + date.getMinutes() : date.getMinutes()) +\n",
-    "            \":\" + (date.getSeconds() < 10 ? \"0\" + date.getSeconds() : date.getSeconds());\n",
-    "        ctx.fillStyle = \"white\";\n",
-    "        ctx.font =\"30px Arial\";\n",
-    "        ctx.fillText(time, x - 58, y + 10);\n",
-    "        ctx.fillText(date.getSeconds(), x - 10, y - radius - 30 );\n",
-    "        ctx.fillText(date.getMinutes(), x - 10, y - (radius * 2) - 30 );\n",
-    "        ctx.fillText(date.getHours(), x - 10, y - (radius * 3) - 30 );\n",
-    "        ctx.fillText(date.getDate(), x - 10, y - (radius * 4) - 30 );\n",
-    "        ctx.fillText(date.getMonth(), x - 10, y - (radius * 5) - 30 );\n",
+    "function speedUp() {\n",
+    "    if (speed <= 0)\n",
+    "        speed = 1;\n",
+    "    if (speed < 30000)\n",
+    "        speed *= 8;\n",
+    "}\n",
+    "\n",
+    "function slowDown() {\n",
+    "    speed /= 8;\n",
+    "    if (speed <= 1)\n",
+    "        speed = 0;\n",
+    "}\n",
+    "\n",
+    "function regularSpeed() {\n",
+    "    speed = 0;\n",
+    "}\n",
+    "\n",
+    "function resetClock() {\n",
+    "    speed = -1;\n",
+    "}\n",
+    "\n",
+    "function animate(date) {\n",
+    "    var date = new Date(date);\n",
+    "    if (speed > 0)\n",
+    "        date.setSeconds((date.getSeconds()) + speed);\n",
+    "    else {\n",
+    "        date.setMilliseconds((date.getMilliseconds() + (1000/60)));\n",
     "    }\n",
+    "    requestAnimationFrame(function() {\n",
+    "        animate(speed > -1 ? date : new Date());\n",
+    "    });\n",
     "\n",
-    "    animate();\n",
+    "    ctx.clearRect(0, 0, canvas.width, canvas.height);\n",
+    "    ctx.fillStyle = \"#090909\";\n",
+    "    ctx.fillRect(0, 0, canvas.width, canvas.height);\n",
     "\n",
-    "    function TimeCircle(x, y, radius, strokeWidth, radiusMultiplyer, end, colour) {\n",
-    "        this.x = x;\n",
-    "        this.y = y;\n",
-    "        this.radiusMultiplyer = radiusMultiplyer;\n",
-    "        this.start = Math.PI * 3 / 2;\n",
-    "        this.end = end;\n",
-    "        this.radius = radius + (strokeWidth * radiusMultiplyer);\n",
-    "        this.strokeWidth = strokeWidth;\n",
-    "        this.colour = colour;\n",
-    "    \n",
-    "        this.draw = function() {\n",
-    "            ctx.beginPath(x, y);\n",
-    "            ctx.arc(this.x, this.y, this.radius, this.start, this.end, this.false);\n",
-    "            ctx.lineWidth = this.strokeWidth;\n",
-    "            ctx.strokeStyle = this.colour;\n",
-    "            ctx.lineCap = 'round';\n",
-    "            ctx.stroke();\n",
-    "        }\n",
+    "    var sec = new TimeCircle(x, y, radius, lineWidth, 1, ((Math.PI * 2 / 60) * date.getSeconds() + Math.PI * 3 / 2), '#329652');\n",
+    "    var min = new TimeCircle(x, y, radius, lineWidth, 2, ((Math.PI * 2 / 60) * date.getMinutes() + Math.PI * 3 / 2), '#c551ab');\n",
+    "    var hour = new TimeCircle(x, y, radius, lineWidth, 3, ((Math.PI * 2 / 24) * date.getHours() + Math.PI * 3 / 2), '#5369c6');\n",
+    "    var day = new TimeCircle(x, y, radius, lineWidth, 4, ((Math.PI * 2 / monthDivider(date.getMonth(), date.getFullYear())) * date.getDate() + Math.PI * 3 / 2), '#d6d483');\n",
+    "    var month = new TimeCircle(x, y, radius, lineWidth, 5, ((Math.PI * 2 / 12) * date.getMonth() + Math.PI * 3 / 2), '#e2c2eb');\n",
+    "\n",
+    "    sec.draw();\n",
+    "    min.draw();\n",
+    "    hour.draw();\n",
+    "    day.draw();\n",
+    "    month.draw();\n",
+    "\n",
+    "    var time = (date.getHours() < 10 ? \"0\" + date.getHours() : date.getHours()) +\n",
+    "        \":\" + (date.getMinutes() < 10 ? \"0\" + date.getMinutes() : date.getMinutes()) +\n",
+    "        \":\" + (date.getSeconds() < 10 ? \"0\" + date.getSeconds() : date.getSeconds()) +\n",
+    "        \", \" + months[date.getMonth()] + \" \" + date.getDate() + \", \" + date.getFullYear();\n",
+    "    ctx.fillStyle = \"white\";\n",
+    "    ctx.font = \"30px Arial\";\n",
+    "    ctx.fillText(time, 30, height - 10);\n",
+    "}\n",
+    "\n",
+    "animate(new Date());\n",
+    "\n",
+    "function TimeCircle(x, y, radius, strokeWidth, radiusMultiplyer, end, colour) {\n",
+    "    this.x = x;\n",
+    "    this.y = y;\n",
+    "    this.radiusMultiplyer = radiusMultiplyer;\n",
+    "    this.start = Math.PI * 3 / 2;\n",
+    "    this.end = end;\n",
+    "    this.radius = radius + (strokeWidth * radiusMultiplyer);\n",
+    "    this.strokeWidth = strokeWidth;\n",
+    "    this.colour = colour;\n",
+    "\n",
+    "    this.draw = function () {\n",
+    "        ctx.beginPath(x, y);\n",
+    "        ctx.arc(this.x, this.y, this.radius, this.start, this.end, this.false);\n",
+    "        ctx.lineWidth = this.strokeWidth;\n",
+    "        ctx.strokeStyle = this.colour;\n",
+    "        ctx.lineCap = 'round';\n",
+    "        ctx.stroke();\n",
     "    }\n",
+    "}\n",
     "\n",
-    "    function monthDivider(month, year) {\n",
-    "        switch (month) {\n",
-    "            case 0 : case 2 : case 4 : case 6 : case 7 : case 9 : case 11 : \n",
-    "                return 31;\n",
-    "            case 3 : case 5 : case 8 : case 10 : \n",
-    "                return 30;\n",
-    "            case 1 : if (((year % 4 == 0) && (year % 100 != 0)) || (year % 400 == 0)) { return 29}\n",
-    "                else {return 28};\n",
-    "            default : return 31;\n",
-    "        }\n",
+    "function monthDivider(month, year) {\n",
+    "    switch (month) {\n",
+    "        case 0:\n",
+    "        case 2:\n",
+    "        case 4:\n",
+    "        case 6:\n",
+    "        case 7:\n",
+    "        case 9:\n",
+    "        case 11:\n",
+    "            return 31;\n",
+    "        case 3:\n",
+    "        case 5:\n",
+    "        case 8:\n",
+    "        case 10:\n",
+    "            return 30;\n",
+    "        case 1:\n",
+    "            if (((year % 4 == 0) && (year % 100 != 0)) || (year % 400 == 0)) {\n",
+    "                return 29\n",
+    "            } else {\n",
+    "                return 28\n",
+    "            };\n",
+    "        default:\n",
+    "            return 31;\n",
     "    }\n",
+    "}\n",
+    "\n",
     "    </script>\n",
     "</body>"
    ]
