Added some text and a guessing time game

--- a/Vincent/CC-193 Geometry Basics 5/GeometryBasics5.ipynb
+++ b/Vincent/CC-193 Geometry Basics 5/GeometryBasics5.ipynb
@@ -9,9 +9,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "                    <script>\n",
+       "                    document.getElementById('toggleButton').onclick = function () {\n",
+       "                        if (code_shown) {\n",
+       "                            $('div.input').hide('500');\n",
+       "                            $('#toggleButton').val('Show Code')\n",
+       "                        } else {\n",
+       "                            $('div.input').show('500');\n",
+       "                            $('#toggleButton').val('Hide Code')\n",
+       "                        }\n",
+       "                        code_shown = !code_shown\n",
+       "                    }\n",
+       "\n",
+       "                    document.getElementById('init').onclick = function () {\n",
+       "                        runAll = document.getElementById('run_all_cells_below').childNodes[1]\n",
+       "                        console.log(runAll)\n",
+       "                        runAll.click()\n",
+       "                    }\n",
+       "\n",
+       "                    $(document).ready(function () {\n",
+       "                        code_shown = true;\n",
+       "                        $('div.input').hide()\n",
+       "                    });\n",
+       "                </script>\n",
+       "                <input type=\"submit\" id=\"toggleButton\" value=\"Show Code\">\n",
+       "                <input id=\"init\" type=\"submit\" value=\"Initialize\">"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import myMagics\n",
     "%uiButtons"
@@ -51,14 +88,407 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Time\n",
+    "Time is a concept we are all very familiar with, seconds, minutes, hours, and days are simply part of our everyday life. Have you ever wondered about how all these units of time relate or why we use \"am\" and \"pm\" when talking about the hours of the day?\n",
+    "\n",
+    "In this notebook we will explore the relationships between all the different units of time and how to use different tools to read and keep track of time. We will also learn how to easily convert between hours, minutes and seconds. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# A Little History\n",
+    "When thinking of the different times of the day one thing stands out, there are two of each hour in the day, for example 2AM and 2PM, why is that?\n",
+    "\n",
+    "Turns out back in the Roman times they decided to the day should be split up into two sections, one for day time and the other for night time. To do this split they decided to break them up into two 12 hour blocks. As we can imagine from back in those days it would only be logical to make the \"day \" 12 hours start at sunrise and the \"night\" 12 hours start at dusk. But since the day/night cycle changes over the year (shorter days in winter for example) then this caused problems.\n",
+    "\n",
+    "<img src=\"http://www.thesummitprep.org/beginners/files/2017/10/day_and_night.png\" style=\"margin: 0 auto; width: 200px;\">\n",
+    "\n",
+    "Eventually it was decided to change from sunset/dusk to midnight/midday, this is where AM and PM where born. AM means \"ante meridiem\" which stands for \"before midday\" and PM means \"psot meridiem\" meaning, you guessed it, \"after midday\". When you think about it this makes sense, 3PM is 3 hours past the midday. Eventually it was decided that keeping one day split up into 24 hours instead of two blocks of 12 hours made more sense. The 24 hour clock was then introduced, this clock hours range from 0 to 23 (totaling 24 hours). We in North America still frequently use the AM/PM 12 hour day format but many parts of the world use the 24 hour clock."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Measuring Time\n",
+    "Now days the time is everywhere, we simply look for a clock on a wall, appliance, a watch, or our phones. This was not always the case though, does this mean time did not exist long ago? Egyptians 1500 BC (roughly 3500 years ago) where very much aware of time and found very cleaver ways for measuring it. For these ancient civilyzation, as for us, knowing the time and months of the year was crutial to their survival. Turns out the most important clocks of all where not found on earth but in the sky! The stars and sun have been used to measure time for thousands of years and by many civilizations. Using the position of the sun casting shadows was used during the day and the position of know constelation where used at night. \n",
+    "\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/6/66/Sundial_-_Canonical_Hour.jpg\" width=\"400\">\n",
+    "<img src=\"https://c.tadst.com/gfx/750x500/tell-time-with-stars.png?1\" width=\"400\">\n",
+    "\n",
+    "Luckily for us we have evolved far beyond using the sun and stars to tell time, imagine trying to get to school on time on a cloudy day! Now days when we get a new watch or clock we simply synchronize it to match another time piece showing the correct time. More and more as devices are connected to the internet we dont even have to set the time, it is done automatically!\n",
+    "\n",
+    "But what about other ways to measure time? What about measuring how long something took?  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How Well do you Know Time?\n",
+    "Let's play a little game, think you can guess exactly 15 seconds without using a clock? If you think you can do it click the button below, when you think its been 15 seconds click it again and see how close you are."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "    <style>\n",
+       "        @import url('https://fonts.googleapis.com/css?family=Patrick+Hand');\n",
+       "\n",
+       "        #btnOutline {\n",
+       "            width: 400px;\n",
+       "            height: 250px;\n",
+       "            border: solid 2px black;\n",
+       "            display: block;\n",
+       "            border-radius: 50px;\n",
+       "            background: rgb(126, 114, 230);\n",
+       "            cursor: pointer;\n",
+       "            margin: 0 auto;\n",
+       "        }\n",
+       "\n",
+       "        #btnOutline:hover {\n",
+       "            background: rgb(144, 134, 238);\n",
+       "            box-shadow: 2px 2px 2px #0a0a0a;\n",
+       "        }\n",
+       "\n",
+       "        #btnText {\n",
+       "            display: block;\n",
+       "            text-align: center;\n",
+       "            vertical-align: middle;\n",
+       "            line-height: 250px;\n",
+       "            font-size: 5em;\n",
+       "            font-family: 'Patrick Hand', cursive;\n",
+       "\n",
+       "        }\n",
+       "    </style>\n",
+       "     <div id=\"btnOutline\" onclick=\"play(this)\">\n",
+       "        <span id=\"btnText\">Start</span>\n",
+       "    </div>\n",
+       "\n",
+       "    <script>\n",
+       "        let gameState = 0;\n",
+       "        let startTime;\n",
+       "        let endTime;\n",
+       "\n",
+       "        function play(e) {\n",
+       "            let text = e.firstElementChild;\n",
+       "            switch (gameState) {\n",
+       "                case 0:\n",
+       "                    startTime = new Date();\n",
+       "                    $('#btnText').fadeOut(800, function () {\n",
+       "                        text.innerHTML = \"15sec?\";\n",
+       "                        $('#btnText').fadeIn(800);\n",
+       "                    });\n",
+       "                    gameState++;\n",
+       "                    break;\n",
+       "                case 1:\n",
+       "                    endTime = new Date();\n",
+       "                    let time = new Date(endTime - startTime);\n",
+       "                    let str = (time.getMinutes() < 10 ? (\"0\" + time.getMinutes()) : (time.getMinutes())) + \":\" + (time.getSeconds() <\n",
+       "                        10 ?\n",
+       "                        (\"0\" + time.getSeconds()) : (time.getSeconds())) + \":\" + time.getMilliseconds();\n",
+       "                    text.innerHTML = str;\n",
+       "                    gameState++;\n",
+       "                    break;\n",
+       "                case 2:\n",
+       "                    delete startTime;\n",
+       "                    delete endTime;\n",
+       "                    text.innerHTML = \"Start\";\n",
+       "                    gameState = 0;\n",
+       "                    break;\n",
+       "                default:\n",
+       "                    gameState = 0;\n",
+       "            }\n",
+       "        };\n",
+       "    </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "    <style>\n",
+    "        @import url('https://fonts.googleapis.com/css?family=Patrick+Hand');\n",
+    "\n",
+    "        #btnOutline {\n",
+    "            width: 400px;\n",
+    "            height: 250px;\n",
+    "            border: solid 2px black;\n",
+    "            display: block;\n",
+    "            border-radius: 50px;\n",
+    "            background: rgb(126, 114, 230);\n",
+    "            cursor: pointer;\n",
+    "            margin: 0 auto;\n",
+    "        }\n",
+    "\n",
+    "        #btnOutline:hover {\n",
+    "            background: rgb(144, 134, 238);\n",
+    "            box-shadow: 2px 2px 2px #0a0a0a;\n",
+    "        }\n",
+    "\n",
+    "        #btnText {\n",
+    "            display: block;\n",
+    "            text-align: center;\n",
+    "            vertical-align: middle;\n",
+    "            line-height: 250px;\n",
+    "            font-size: 5em;\n",
+    "            font-family: 'Patrick Hand', cursive;\n",
+    "\n",
+    "        }\n",
+    "    </style>\n",
+    "     <div id=\"btnOutline\" onclick=\"play(this)\">\n",
+    "        <span id=\"btnText\">Start</span>\n",
+    "    </div>\n",
+    "\n",
+    "    <script>\n",
+    "        let gameState = 0;\n",
+    "        let startTime;\n",
+    "        let endTime;\n",
+    "\n",
+    "        function play(e) {\n",
+    "            let text = e.firstElementChild;\n",
+    "            switch (gameState) {\n",
+    "                case 0:\n",
+    "                    startTime = new Date();\n",
+    "                    $('#btnText').fadeOut(800, function () {\n",
+    "                        text.innerHTML = \"15sec?\";\n",
+    "                        $('#btnText').fadeIn(800);\n",
+    "                    });\n",
+    "                    gameState++;\n",
+    "                    break;\n",
+    "                case 1:\n",
+    "                    endTime = new Date();\n",
+    "                    let time = new Date(endTime - startTime);\n",
+    "                    let str = (time.getMinutes() < 10 ? (\"0\" + time.getMinutes()) : (time.getMinutes())) + \":\" + (time.getSeconds() <\n",
+    "                        10 ?\n",
+    "                        (\"0\" + time.getSeconds()) : (time.getSeconds())) + \":\" + time.getMilliseconds();\n",
+    "                    text.innerHTML = str;\n",
+    "                    gameState++;\n",
+    "                    break;\n",
+    "                case 2:\n",
+    "                    delete startTime;\n",
+    "                    delete endTime;\n",
+    "                    text.innerHTML = \"Start\";\n",
+    "                    gameState = 0;\n",
+    "                    break;\n",
+    "                default:\n",
+    "                    gameState = 0;\n",
+    "            }\n",
+    "        };\n",
+    "    </script>\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Talk about why we use fractional time like half past, quarter to..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Geomatry - Basics\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "# body {\n",
+       "#     margin: 0;\n",
+       "# }\n",
+       "\n",
+       "# .main {\n",
+       "#     margin: 0 auto;\n",
+       "#     width: 500px;\n",
+       "# }\n",
+       "\n",
+       "#clock {\n",
+       "    border-radius: 40px;\n",
+       "    padding: 0;\n",
+       "}\n",
+       "\n",
+       "h1 {\n",
+       "    font-family: Arial, Helvetica, sans-serif;\n",
+       "}\n",
+       "</style>\n",
+       "<body>\n",
+       "    <div class=\"main\">\n",
+       "        <canvas id=\"clock\"></canvas>\n",
+       "        <div class=\"btns\">\n",
+       "            <button onclick=\"speedUp();\">Speed Up</button>\n",
+       "            <button onclick=\"slowDown();\">Slow Down</button>\n",
+       "            <button onclick=\"regularSpeed(null);\">Regular Speed</button>\n",
+       "            <button onclick=\"resetClock();\">Reset</button>\n",
+       "        </div>\n",
+       "    </div>\n",
+       "    <script>\n",
+       "   var canvas = document.getElementById('clock');\n",
+       "var ctx = canvas.getContext('2d');\n",
+       "\n",
+       "var width = 600;\n",
+       "var height = 600;\n",
+       "canvas.width = width;\n",
+       "canvas.height = height;\n",
+       "var x = canvas.width / 2;\n",
+       "var y = canvas.height / 2;\n",
+       "var radius = 40;\n",
+       "var lineWidth = 35;\n",
+       "\n",
+       "var speed = 0;\n",
+       "\n",
+       "var months = [\n",
+       "    \"January\",\n",
+       "    \"February\",\n",
+       "    \"March\",\n",
+       "    \"April\",\n",
+       "    \"May\",\n",
+       "    \"June\",\n",
+       "    \"July\",\n",
+       "    \"August\",\n",
+       "    \"September\",\n",
+       "    \"October\",\n",
+       "    \"November\",\n",
+       "    \"December\",\n",
+       "]\n",
+       "\n",
+       "function speedUp() {\n",
+       "    if (speed <= 0)\n",
+       "        speed = 1;\n",
+       "    if (speed < 30000)\n",
+       "        speed *= 8;\n",
+       "}\n",
+       "\n",
+       "function slowDown() {\n",
+       "    speed /= 8;\n",
+       "    if (speed <= 1)\n",
+       "        speed = 0;\n",
+       "}\n",
+       "\n",
+       "function regularSpeed() {\n",
+       "    speed = 0;\n",
+       "}\n",
+       "\n",
+       "function resetClock() {\n",
+       "    speed = -1;\n",
+       "}\n",
+       "\n",
+       "function animate(date) {\n",
+       "    var date = new Date(date);\n",
+       "    if (speed > 0)\n",
+       "        date.setSeconds((date.getSeconds()) + speed);\n",
+       "    else {\n",
+       "        date.setMilliseconds((date.getMilliseconds() + (1000/60)));\n",
+       "    }\n",
+       "    requestAnimationFrame(function() {\n",
+       "        animate(speed > -1 ? date : new Date());\n",
+       "    });\n",
+       "\n",
+       "    ctx.clearRect(0, 0, canvas.width, canvas.height);\n",
+       "    ctx.fillStyle = \"#090909\";\n",
+       "    ctx.fillRect(0, 0, canvas.width, canvas.height);\n",
+       "\n",
+       "    var sec = new TimeCircle(x, y, radius, lineWidth, 1, ((Math.PI * 2 / 60) * date.getSeconds() + Math.PI * 3 / 2), '#329652');\n",
+       "    var min = new TimeCircle(x, y, radius, lineWidth, 2, ((Math.PI * 2 / 60) * date.getMinutes() + Math.PI * 3 / 2), '#c551ab');\n",
+       "    var hour = new TimeCircle(x, y, radius, lineWidth, 3, ((Math.PI * 2 / 24) * date.getHours() + Math.PI * 3 / 2), '#5369c6');\n",
+       "    var day = new TimeCircle(x, y, radius, lineWidth, 4, ((Math.PI * 2 / monthDivider(date.getMonth(), date.getFullYear())) * date.getDate() + Math.PI * 3 / 2), '#d6d483');\n",
+       "    var month = new TimeCircle(x, y, radius, lineWidth, 5, ((Math.PI * 2 / 12) * date.getMonth() + Math.PI * 3 / 2), '#e2c2eb');\n",
+       "\n",
+       "    sec.draw();\n",
+       "    min.draw();\n",
+       "    hour.draw();\n",
+       "    day.draw();\n",
+       "    month.draw();\n",
+       "\n",
+       "    var time = (date.getHours() < 10 ? \"0\" + date.getHours() : date.getHours()) +\n",
+       "        \":\" + (date.getMinutes() < 10 ? \"0\" + date.getMinutes() : date.getMinutes()) +\n",
+       "        \":\" + (date.getSeconds() < 10 ? \"0\" + date.getSeconds() : date.getSeconds()) +\n",
+       "        \", \" + months[date.getMonth()] + \" \" + date.getDate() + \", \" + date.getFullYear();\n",
+       "    ctx.fillStyle = \"white\";\n",
+       "    ctx.font = \"30px Arial\";\n",
+       "    ctx.fillText(time, 30, height - 10);\n",
+       "}\n",
+       "\n",
+       "animate(new Date());\n",
+       "\n",
+       "function TimeCircle(x, y, radius, strokeWidth, radiusMultiplyer, end, colour) {\n",
+       "    this.x = x;\n",
+       "    this.y = y;\n",
+       "    this.radiusMultiplyer = radiusMultiplyer;\n",
+       "    this.start = Math.PI * 3 / 2;\n",
+       "    this.end = end;\n",
+       "    this.radius = radius + (strokeWidth * radiusMultiplyer);\n",
+       "    this.strokeWidth = strokeWidth;\n",
+       "    this.colour = colour;\n",
+       "\n",
+       "    this.draw = function () {\n",
+       "        ctx.beginPath(x, y);\n",
+       "        ctx.arc(this.x, this.y, this.radius, this.start, this.end, this.false);\n",
+       "        ctx.lineWidth = this.strokeWidth;\n",
+       "        ctx.strokeStyle = this.colour;\n",
+       "        ctx.lineCap = 'round';\n",
+       "        ctx.stroke();\n",
+       "    }\n",
+       "}\n",
+       "\n",
+       "function monthDivider(month, year) {\n",
+       "    switch (month) {\n",
+       "        case 0:\n",
+       "        case 2:\n",
+       "        case 4:\n",
+       "        case 6:\n",
+       "        case 7:\n",
+       "        case 9:\n",
+       "        case 11:\n",
+       "            return 31;\n",
+       "        case 3:\n",
+       "        case 5:\n",
+       "        case 8:\n",
+       "        case 10:\n",
+       "            return 30;\n",
+       "        case 1:\n",
+       "            if (((year % 4 == 0) && (year % 100 != 0)) || (year % 400 == 0)) {\n",
+       "                return 29\n",
+       "            } else {\n",
+       "                return 28\n",
+       "            };\n",
+       "        default:\n",
+       "            return 31;\n",
+       "    }\n",
+       "}\n",
+       "\n",
+       "    </script>\n",
+       "</body>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%html\n",
     "<style>\n",
